force-app/main/default/objects/PerformanceLog__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Apex Class Name</description>
    <label>Apex Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>