force-app/main/default/objects/PerformanceLog__c/fields/ApexExecContext__c.field-meta.xml
<CustomField>
    <fullName>ApexExecContext__c</fullName>
    <label>Apex Exec Context</label>
    <length>40</length>
    <type>Text</type>
</CustomField>