force-app/main/default/objects/PerformanceLog__c/fields/ApexSObject__c.field-meta.xml
<CustomField>
    <fullName>ApexSObject__c</fullName>
    <label>Apex SObject</label>
    <length>40</length>
    <type>Text</type>
</CustomField>