force-app/main/default/objects/PerformanceLog__c/fields/class_name__c.field-meta.xml
<CustomField>
    <fullName>class_name__c</fullName>
    <description>Name of class that is executed within the current transaction.</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>