force-app/main/default/objects/PerformanceLog__c/fields/CPU_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time_Used__c</fullName>
    <label>CPU Time Used</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>