force-app/main/default/objects/PerformanceLog__c/fields/CPUTime_Limits__c.field-meta.xml
<CustomField>
    <fullName>CPUTime_Limits__c</fullName>
    <label>CPUTime Limits</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>