force-app/main/default/objects/PerformanceLog__c/fields/Heap_Size_Left_percentage__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Left_percentage__c</fullName>
    <label>Heap Size Left %</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>