force-app/main/default/objects/PerformanceLog__c/fields/Heap_Size_Used__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Used__c</fullName>
    <label>Heap Size Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>