force-app/main/default/objects/PerformanceLog__c/fields/HeapSize_Limits__c.field-meta.xml
<CustomField>
    <fullName>HeapSize_Limits__c</fullName>
    <label>HeapSize Limits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>