force-app/main/default/objects/PerformanceLog__c/fields/is_current_context_trigger__c.field-meta.xml
<CustomField>
    <fullName>is_current_context_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the context of the current transaction a trigger?</description>
    <label>Is Current Context Trigger</label>
    <type>Checkbox</type>
</CustomField>