force-app/main/default/objects/PerformanceLog__c/fields/IsCurrentContextTrigger__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentContextTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrentContextTrigger</label>
    <type>Checkbox</type>
</CustomField>