force-app/main/default/objects/PerformanceLog__c/fields/method_name__c.field-meta.xml
<CustomField>
    <fullName>method_name__c</fullName>
    <description>Name of the method that is executed</description>
    <label>Method Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>