force-app/main/default/objects/PerformanceLog__c/fields/object_name__c.field-meta.xml
<CustomField>
    <fullName>object_name__c</fullName>
    <description>Name of the object whose trigger is running within the current transaction.</description>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>