force-app/main/default/objects/PerformanceLog__c/fields/organization_id__c.field-meta.xml
<CustomField>
    <fullName>organization_id__c</fullName>
    <label>Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>