force-app/main/default/objects/PerformanceLog__c/fields/organization_name__c.field-meta.xml
<CustomField>
    <fullName>organization_name__c</fullName>
    <description>Name of the Salesforce Org</description>
    <label>Organization Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>