force-app/main/default/objects/PerformanceLog__c/fields/profile_id__c.field-meta.xml
<CustomField>
    <fullName>profile_id__c</fullName>
    <description>Profile Id of the User in Context</description>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>