force-app/main/default/objects/PerformanceLog__c/fields/Queries_Left_percentage__c.field-meta.xml
<CustomField>
    <fullName>Queries_Left_percentage__c</fullName>
    <label>Queries Left %</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>