force-app/main/default/objects/PerformanceLog__c/fields/Query_Limits__c.field-meta.xml
<CustomField>
    <fullName>Query_Limits__c</fullName>
    <label>Query Limits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>