force-app/main/default/objects/PerformanceLog__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <type>TextArea</type>
</CustomField>