force-app/main/default/objects/PerformanceLog__c/fields/records_in_context__c.field-meta.xml
<CustomField>
    <fullName>records_in_context__c</fullName>
    <description>Number of records being processed in context</description>
    <label>Records In Context</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>