force-app/main/default/objects/PerformanceLog__c/fields/RecordsInContext__c.field-meta.xml
<CustomField>
    <fullName>RecordsInContext__c</fullName>
    <label>Records In Context</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>