force-app/main/default/objects/PerformanceLog__c/fields/request_id__c.field-meta.xml
<CustomField>
    <fullName>request_id__c</fullName>
    <description>Request Id of the transaction</description>
    <label>Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>