force-app/main/default/objects/PerformanceLog__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>Request Id</label>
    <type>TextArea</type>
</CustomField>