force-app/main/default/objects/PerformanceLog__c/fields/runtime__c.field-meta.xml
<CustomField>
    <fullName>runtime__c</fullName>
    <label>Runtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>