force-app/main/default/objects/PerformanceLog__c/fields/Total_RunTime__c.field-meta.xml
<CustomField>
    <fullName>Total_RunTime__c</fullName>
    <label>Total RunTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>