force-app/main/default/objects/PerformanceLog__c/fields/transaction_quiddity__c.field-meta.xml
<CustomField>
    <fullName>transaction_quiddity__c</fullName>
    <description>Holds the quiddity enum</description>
    <label>Transaction Quiddity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>