force-app/main/default/objects/PerformanceLog__c/fields/trigger_type__c.field-meta.xml
<CustomField>
    <fullName>trigger_type__c</fullName>
    <description>The type of trigger being executed</description>
    <label>Trigger Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>