force-app/main/default/objects/PerformanceLog__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <description>Id of the user in context</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>