force-app/main/default/objects/PerformanceLog__c/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <description>Name of the user in context</description>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>