force-app/main/default/objects/PerformanceLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPUTime_Left_percentage__c</columns>
    <columns>runtime__c</columns>
    <columns>class_name__c</columns>
    <columns>method_name__c</columns>
    <columns>object_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>